# tad

./: CMakeLists.txt
libs/intersection/: customGeometry.h
src/: CMakeLists.txt
src/input/: readInput.cpp  readInput.h
src/task1a/: task1a.h
src/task21/: CMakeLists.txt  task21.cpp  task21.h
src/task3/: task3.cpp  task3.h
src/utility/: CMakeLists.txt
task1/: CMakeLists.txt  LICENSE
task1/libs/: CMakeLists.txt
task1/libs/happly/: CMakeLists.txt
task1/libs/intersection/: CMakeLists.txt  customGeometry.h  raybox.h
task1/matlab/: plot1a.fig  plot1a.m  task1a.fig  task1a.m  task1b.fig  task1b.m  task3.m
task1/resources/: R.ext  descriptors.ext  keypoints.yml  t.ext
task1/resources/matlab/init/: begin.m  end.m
task1/resources/matlab/task1a/: DSC_9743_Keypoints.m  DSC_9744_Keypoints.m  DSC_9745_Keypoints.m  DSC_9746_Keypoints.m  DSC_9747_Keypoints.m  DSC_9748_Keypoints.m  DSC_9749_Keypoints.m  DSC_9750_Keypoints.m
task1/resources/matlab/task1b/: DSC_9743_Keypoints.m  DSC_9744_Keypoints.m  DSC_9745_Keypoints.m  DSC_9746_Keypoints.m  DSC_9747_Keypoints.m  DSC_9748_Keypoints.m  DSC_9749_Keypoints.m  DSC_9750_Keypoints.m
task1/resources/matlab/task3/: color_000007_Rt.m  color_000008_Rt.m  color_000009_Rt.m  color_000010_Rt.m  color_000011_Rt.m  color_000012_Rt.m  color_000013_Rt.m  color_000014_Rt.m  color_000015_Rt.m  color_000016_Rt.m  color_000017_Rt.m  color_000018_Rt.m  color_000019_Rt.m  color_000020_Rt.m  color_000021_Rt.m  color_000022_Rt.m  color_000023_Rt.m  (+7 more)
task1/src/: CMakeLists.txt  main.cpp
task1/src/global/: CMakeLists.txt  enum.h  helper.cpp  helper.h
task1/src/input/: CMakeLists.txt  readInput.cpp  readInput.h
task1/src/input/include/: CMakeLists.txt  test.h
task1/src/input/src/: CMakeLists.txt  test.cpp
task1/src/task1a/: CMakeLists.txt  task1a.cpp  task1a.h
task1/src/task1b/: CMakeLists.txt  task1b.cpp  task1b.h
task1/src/task2/: CMakeLists.txt  task2.cpp  task2.h
task1/src/task3/: CMakeLists.txt  task3.cpp  task3.h
task1/src/utility/: CMakeLists.txt  utility.cpp  utility.h
